[gd_scene load_steps=11 format=2]

[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Start_screen.gd" type="Script" id=2]
[ext_resource path="res://baseTileMap.tres" type="TileSet" id=3]
[ext_resource path="res://Assets/Background/Background parts - Grass/_Complete_static_BG_(288 x 208).png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 13
font_data = ExtResource( 1 )

[node name="Start_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 159, 95 )
scale = Vector2( 1.10417, 0.932692 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0196078, 0.0196078, 0.0196078, 0.443137 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196608, 30, 0, 262144, 1, 0, 262145, 0, 0, 262146, 2, 0, 262157, 39, 0, 262158, 38, 0, 262159, 39, 0, 327680, 5, 0, 327681, 6, 0, 327682, 7, 0, 393216, 5, 0, 393217, 6, 0, 393218, 7, 0, 393234, 1, 0, 393235, 2, 0, 458752, 5, 0, 458753, 6, 0, 458754, 7, 0, 458770, 5, 0, 458771, 7, 0, 524288, 5, 0, 524289, 6, 0, 524290, 7, 0, 524306, 5, 0, 524307, 7, 0, 589824, 5, 0, 589825, 6, 0, 589826, 7, 0, 589827, 30, 0, 589840, 30, 0, 589841, 30, 0, 589842, 5, 0, 589843, 7, 0, 655360, 1, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 46, 0, 655368, 47, 0, 655369, 47, 0, 655370, 47, 0, 655371, 47, 0, 655372, 48, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 2, 0, 720896, 5, 0, 720897, 6, 0, 720898, 6, 0, 720899, 6, 0, 720900, 6, 0, 720901, 6, 0, 720902, 6, 0, 720903, 56, 0, 720904, 57, 0, 720905, 57, 0, 720906, 57, 0, 720907, 57, 0, 720908, 58, 0, 720909, 6, 0, 720910, 6, 0, 720911, 6, 0, 720912, 6, 0, 720913, 6, 0, 720914, 6, 0, 720915, 6, 0 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -28.0
margin_right = 64.0
margin_bottom = 28.0

[node name="start_btn" type="Button" parent="controls"]
margin_right = 128.0
margin_bottom = 13.0
focus_neighbour_top = NodePath("../quit_btn")
theme = SubResource( 6 )
custom_colors/font_color_focus = Color( 0.972549, 0.964706, 0.113725, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.964706, 0.113725, 1 )
custom_colors/font_color_pressed = Color( 0.384314, 0.443137, 0.054902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="controls_btn" type="Button" parent="controls"]
margin_top = 17.0
margin_right = 128.0
margin_bottom = 30.0
theme = SubResource( 6 )
custom_colors/font_color_focus = Color( 0.972549, 0.964706, 0.113725, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.964706, 0.113725, 1 )
custom_colors/font_color_pressed = Color( 0.384314, 0.443137, 0.054902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Controls"

[node name="quit_btn" type="Button" parent="controls"]
margin_top = 34.0
margin_right = 128.0
margin_bottom = 47.0
focus_neighbour_bottom = NodePath("../start_btn")
theme = SubResource( 6 )
custom_colors/font_color_focus = Color( 0.972549, 0.964706, 0.113725, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.964706, 0.113725, 1 )
custom_colors/font_color_pressed = Color( 0.384314, 0.443137, 0.054902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Quit"

[connection signal="pressed" from="controls/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="controls/controls_btn" to="." method="_on_controls_btn_pressed"]
[connection signal="pressed" from="controls/quit_btn" to="." method="_on_quit_btn_pressed"]
